Finish gatsby tutorial part 4

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-gatsby-site",
   "version": "1.0.0",
   "private": true,
-  "description": "My Gatsby Site",
+  "description": "I have changed it",
   "author": "Wonjun Jang",
   "keywords": [
     "gatsby"
