--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "@deckdeckgo/highlight-code": "^3.6.0",
@@ -25,6 +26,7 @@
     "gatsby-remark-highlight-code": "^3.2.0",
     "gatsby-source-filesystem": "^4.6.0",
     "gatsby-transformer-remark": "^5.6.0",
+    "gh-pages": "^3.2.3",
     "momentjs": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
