--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "gatsby-remark-highlight-code": "^3.2.0",
     "gatsby-source-filesystem": "^4.6.0",
     "gatsby-transformer-remark": "^5.6.0",
-    "gh-pages": "^3.2.3",
     "momentjs": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
