--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-mdx": "^3.6.0",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-remark-highlight-code": "^3.2.0",
+    "gatsby-remark-images": "^6.6.0",
     "gatsby-source-filesystem": "^4.6.0",
     "gatsby-transformer-remark": "^5.6.0",
     "momentjs": "^2.0.0",
